--- a/scripts/templates/day.test.template.ejs
+++ b/scripts/templates/day.test.template.ejs
@@ -3,9 +3,9 @@
 import { part1, part2 } from '../src/<%= data.dayName %>';
 
 test('part one test', () => {
-  expect(part1("")).toBe(0);
+  expect(part1(``)).toBe(0);
 });
 
 test('part two test', () => {
-  expect(part2("")).toBe(0);
+  expect(part2(``)).toBe(0);
 });
